fixed shop page error with side bar and added overflow scroll and height for main categories

--- a/BookMarket/static/css/main.css
+++ b/BookMarket/static/css/main.css
@@ -70,10 +70,10 @@ ORDER: Base + typography > general layout + grid > page layout > components
 /* Start Gradient Area css
 ============================================================================================ */
 .gradient-bg, .primary-btn, .add-bag .add-btn, .single-product .product-details .prd-bottom .social-info span:after, .social-info span:after, .grid-btn:hover, .list-btn:hover, .grid-btn.active, .list-btn.active, .pagination a:last-child:hover, .pagination a.active, .pagination a:not(:last-child):hover, .s_Product_carousel .owl-dots div.active, .s_product_text .card_area .icon_btn:after, .product_description_area .nav.nav-tabs li a.active, .blog-pagination .page-item.active .page-link {
-  background: -webkit-linear-gradient(90deg, #ffd98e 0%, #fd8369 100%);
-  background: -moz-linear-gradient(90deg,  #ffd98e 0%, #fd8369 100%);
-  background: -o-linear-gradient(90deg,  #ffd98e 0%, #fd8369 100%);
-  background: linear-gradient(90deg,  #ffd98e 0%, #fd8369 100%); }
+  background: -webkit-linear-gradient(90deg, #87CEEB 0%, #00BFFF 100%);
+  background: -moz-linear-gradient(90deg, #87CEEB 0%, #00BFFF 100%);
+  background: -o-linear-gradient(90deg, #87CEEB 0%, #00BFFF 100%);
+  background: linear-gradient(90deg, #87CEEB 0%, #00BFFF 100%); }
 
 .gradient-bg-reverse, #search_input_box .container-wrapper {
   background: -webkit-linear-gradient(270deg, #87CEEB 0%, #00BFFF 100%);
@@ -1131,8 +1131,7 @@ h6 {
             height: 0;
             border-style: solid;
             border-width: 10px 10px 0 10px;
-            border-color: #eeeeee transparent transparent
- transparent;
+            border-color: #eeeeee transparent transparent transparent;
             position: absolute;
             right: 24px;
             top: 45px;
@@ -3632,7 +3631,9 @@ label {
 .sidebar-categories .main-categories {
   padding: 0 20px;
   background: #fff;
-  box-shadow: 0 10px 10px rgba(153, 153, 153, 0.1); }
+  box-shadow: 0 10px 10px rgba(153, 153, 153, 0.1);
+  height: 80vh;
+  overflow-y: scroll; }
 
 .sidebar-categories .main-nav-list a {
   font-size: 14px;
