--- a/BookMarket/static/sass/theme/_common.scss
+++ b/BookMarket/static/sass/theme/_common.scss
@@ -1394,6 +1394,8 @@
 		padding: 0 20px;
 		background: $white;
 		box-shadow: 0 10px 10px rgba(153, 153, 153, 0.1);
+		height: 80vh;
+		overflow-y: scroll;
 	}
 	.main-nav-list {
 		a {
